# algo-trade

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOY.md  Dockerfile  README.hf-space.md  README.md  dev.py  pyproject.toml  requirements.txt  vercel.json
.cursor/: mcp.json
.github/workflows/: python-ci.yml  web-ci.yml
api/: index.py
backend/: README.md
backend/api/: __init__.py  config.py  deps.py  errors.py  main.py  normalize.py
backend/api/routers/: backtest.py  extract.py  extractions.py  forecast.py  meta.py  universe.py
backend/api/services/: backtest.py  extract_job.py  extractions.py  forecast.py  universe.py
backend/mock/v1/: backtest.json  manifest.json
backend/scripts/: make-ranking-snapshot.py  validate-mock-contract.py
backend/universe/: README.md  manufacturers.json
docs/: ARCHITECTURE.md  hld-web-interface.md  implementation-plan-web.md  playwright-mcp.md
docs/demo/: .gitignore  README.md  filingsignal-demo.webm
examples/: extract_one.py  fetch_one.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: audit.spec.ts  dashboard.spec.ts  explorer.spec.ts  material.spec.ts  mock-api.spec.ts  navigation.spec.ts
frontend/scripts/: record-demo.mjs  sync-mock.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  config.ts  endpoints.ts  fallback.ts  mockFilter.ts
frontend/src/hooks/: useBacktest.ts  useExtraction.ts  useExtractions.ts  useForecastSummary.ts  useInstruments.ts  useManufacturers.ts  useMaterialForecast.ts  useMaterials.ts  useRanking.ts
frontend/src/lib/: brand.ts  explorerParams.ts  format.ts
frontend/src/routes/: AboutPage.tsx  BacktestPage.tsx  CompanyPage.tsx  DashboardPage.tsx  ExplorerPage.tsx  FilingPage.tsx  MaterialPage.tsx  NotFoundPage.tsx
frontend/tests/: apiPaths.test.ts  contract.test.ts  explorerParams.test.ts  fallback.test.ts  mockFilter.test.ts
src/algo_trade/: __init__.py  backtest.py  backtest_cli.py  env.py  extract_cli.py  extract_progress.py  extractor.py  fetcher.py  llm_config.py  models.py  plot.py  plot_cli.py  prices.py  recommender.py  timeline.py  timer.py
tests/: README.md  paths.py  test_api.py  test_buffer_schema.py  test_buffer_store.py  test_extractor.py  test_integration.py  test_timeline.py  test_timer.py
tests/integration/: conftest.py  test_api_extractions.py  test_api_forecast.py  test_api_smoke.py
tests/unit/: conftest.py  test_api_backtest.py  test_api_config.py  test_api_errors.py  test_api_extract_job.py  test_backtest.py  test_env.py  test_extract_cli.py  test_extract_progress.py  test_extractor.py  test_fetcher.py  test_forecast_service.py  test_llm_config.py  test_plot.py  test_prices.py  test_recommender.py  test_timer.py  test_walkforward.py
universe/: README.md  material-to-index.json  materials.json
(+54 files in other folders)
