[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-trade"
version = "0.0.1"
description = "Two-agent EDGAR -> sector pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aviad59" }]
dependencies = [
    "edgartools",
    "pydantic>=2.0",
    "anthropic>=0.92",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
algo-trade-fetch = "algo_trade.fetcher:_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"algo_trade.buffer" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
