[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-trade"
version = "0.0.1"
description = "Two-agent EDGAR -> sector pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aviad59" }]
dependencies = [
    "edgartools",
    "pydantic>=2.0",
    "anthropic>=0.92",
    "pandas>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
algo-trade-fetch = "algo_trade.fetcher:_cli"
algo-trade-extract = "algo_trade.extract_cli:_cli"
algo-trade-api = "api.main:run"

[tool.setuptools.packages.find]
where = ["src", "backend"]

[tool.setuptools.package-data]
"algo_trade.buffer" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
